apps/getreeba/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getreeba
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: getreeba
  template:
    metadata:
      labels:
        app: getreeba
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: getreeba
          image: ghcr.io/fosleen/getreeba:latest
          ports:
            - containerPort: 8000
