apps/getreeba/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: getreeba-ingress
  namespace: default
spec:
  rules:
    - host: getreeba.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: getreeba
                port:
                  number: 80
    - host: api.getreeba.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: getreeba
                port:
                  number: 80
